登录注册接口，微信登录

--- a/yizu/Login/controller/registerViewController/zh-Hans.lproj/registerInterface.strings
+++ b/yizu/Login/controller/registerViewController/zh-Hans.lproj/registerInterface.strings
@@ -6,4 +6,4 @@
 "WW4-CT-i8i.placeholder" = "请输入新密码";
 
 /* Class = "UITextField"; placeholder = "Please enter the E-mail"; ObjectID = "pJN-Be-TtZ"; */
-"pJN-Be-TtZ.placeholder" = "请输入电子邮件";
+"pJN-Be-TtZ.placeholder" = "请输入手机号";
